--- a/app/src/main/res/layout/activity_birinch_mavzu.xml
+++ b/app/src/main/res/layout/activity_birinch_mavzu.xml
@@ -28,6 +28,7 @@
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_3"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="3-masala"
@@ -90,6 +91,7 @@
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_2"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="2-masala"
