--- a/app/src/main/res/layout/activity_birinch_mavzu.xml
+++ b/app/src/main/res/layout/activity_birinch_mavzu.xml
@@ -35,6 +35,7 @@
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_5"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="5-masala"
@@ -98,12 +99,14 @@
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_4"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="4-masala"
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_6"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="6-masala"
