--- a/app/src/main/res/drawable/bg_dars.xml
+++ b/app/src/main/res/drawable/bg_dars.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:angle="40" android:centerColor="#FF0000" android:endColor="#0045FF" android:startColor="#34FF01" />
+            <gradient android:angle="40"
+                android:centerColor="#FF0000"
+                android:endColor="#0045FF"
+                android:startColor="#34FF01" />
         </shape>
     </item>
 </selector>
