--- a/app/src/main/res/layout/activity_tortinchi_masala1.xml
+++ b/app/src/main/res/layout/activity_tortinchi_masala1.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_dars"
     android:orientation="vertical"
     tools:context=".mavzular.birinchMavzu.masala.TortinchiMasala1Activity">
 
@@ -40,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:inputType="number"
-                android:text="d="
+                android:hint="d="
                 android:textSize="30dp" />
 
             <TextView
