--- a/app/src/main/res/layout/activity_birinch_mavzu.xml
+++ b/app/src/main/res/layout/activity_birinch_mavzu.xml
@@ -42,12 +42,14 @@
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_7"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="7-masala"
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_9"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="9-masala"
@@ -113,12 +115,14 @@
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_8"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="8-masala"
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_10"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="10-masala"
