--- a/app/src/main/res/layout/activity_birinch_mavzu.xml
+++ b/app/src/main/res/layout/activity_birinch_mavzu.xml
@@ -129,6 +129,7 @@
                     android:textSize="30dp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_12"
                     android:layout_width="200dp"
                     android:layout_height="100dp"
                     android:text="12-masala"
