--- a/app/src/main/res/layout/activity_on_uchinchi_masala1.xml
+++ b/app/src/main/res/layout/activity_on_uchinchi_masala1.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+ <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".mavzular.birinchMavzu.masala.OltinchiMasala1Activity">
+    tools:context=".mavzular.birinchMavzu.masala.OnUchinchiMasala1Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Begin6"
+                android:text="Begin13"
                 android:textColor="#000"
                 android:textSize="50dp" />
 
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="10dp"
-                android:text="Begin6. Paralelepepidning tomonlari a, b, c berilgan. Uning hajmini V =a*b*c va to'la sirti S = 2-(a*b+b*c+a*c) aniqlansin."
+                android:text="Begin13. Umumiy markazga bo'lgan ikkita aylana radiusi berilgan. R1,R2(R1 > R2) Ularnig yuzalari S1 va S2, ularning ayirmasi S3 aniqlansin."
                 android:textColor="#000"
                 android:textSize="30dp" />
 
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:hint="a="
+                android:hint="R1="
                 android:inputType="number"
                 android:textSize="30dp" />
 
@@ -47,18 +47,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:hint="b="
+                android:hint="R2="
                 android:inputType="number"
                 android:textSize="30dp" />
 
-            <EditText
-                android:id="@+id/c"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:hint="c="
-                android:inputType="number"
-                android:textSize="30dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,13 +68,13 @@
                 <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:src="@drawable/img_11" />
+                    android:src="@drawable/img_2" />
 
                 <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/img_12" />
+                    android:src="@drawable/img_3" />
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -90,9 +82,9 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_1"
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:background="?android:attr/alertDialogIcon"
+                android:text="hisobla"
                 android:textSize="30dp" />
 
             <TextView
@@ -107,4 +99,5 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
-</androidx.appcompat.widget.LinearLayoutCompat>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
