--- a/app/src/main/res/layout/activity_toqqizinchi_masala1.xml
+++ b/app/src/main/res/layout/activity_toqqizinchi_masala1.xml
@@ -76,7 +76,7 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/img" />
+                    android:src="@drawable/img_34" />
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -101,6 +101,5 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
