--- a/app/src/main/res/layout/activity_uchinchi_masala1.xml
+++ b/app/src/main/res/layout/activity_uchinchi_masala1.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:text="a="
+                android:hint="a="
                 android:textSize="30dp" />
 
             <EditText
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:text="b="
+                android:hint="b="
                 android:textSize="30dp" />
 
             <TextView
