--- a/app/src/main/res/layout/activity_ikkinchi_mavzu.xml
+++ b/app/src/main/res/layout/activity_ikkinchi_mavzu.xml
@@ -4,6 +4,179 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:background="@drawable/bg_sashka"
     tools:context="com.example.androidteam32.mavzular.ikkinchiMavzu.IkkinchiMavzuActivity">
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_1"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="1-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_3"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="3-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_5"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="5-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_7"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="7-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_9"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="9-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_11"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="11-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_13"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="13-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_15"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="15-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_17"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="17-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_19"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="19-masala"
+                    android:textSize="30dp" />
+
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_2"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="2-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_4"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="4-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_6"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="6-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_8"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="8-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_10"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="10-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_12"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="12-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_14"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="14-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_16"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="16-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_18"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="18-masala"
+                    android:textSize="30dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_20"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:text="20-masala"
+                    android:textSize="30dp" />
+
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
