--- a/app/src/main/res/layout/activity_binchi_masala2.xml
+++ b/app/src/main/res/layout/activity_binchi_masala2.xml
@@ -65,6 +65,14 @@
                 android:textColor="#000"
                 android:textSize="50dp" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:text="hisobla"
+                android:id="@+id/btn_1"
+                android:textSize="30dp" />
+
             <TextView
                 android:id="@+id/misol"
                 android:layout_width="wrap_content"
