--- a/app/src/main/res/layout/activity_uchinchi_masala2.xml
+++ b/app/src/main/res/layout/activity_uchinchi_masala2.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mavzular.birinchMavzu.masala.OnTortinchiMasala1Activity">
+    tools:context=".mavzular.ikkinchiMavzu.masala.UchinchiMasala2Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,42 +14,31 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Begin14"
+                android:text="integer 3"
                 android:textColor="#000"
                 android:textSize="50dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginHorizontal="10dp"
-                android:text="Begin14. Aylananing uzunligi L berilgan. Uning radiusi R va yuzasi S aniqlansin L = 2*pi*R  S =pi*R2  pi= 3 14"
+                android:text="Integer3. Faylning hajmi baytlarda berilgan. Bo'lib butunni olish operatsiyasidan foydalanib fayl
+hajmining to'liq kilobaytlarda ifodalovchi programma tuzilsin. (1Kb=1024 bayt)"
                 android:textColor="#000"
                 android:textSize="30dp" />
 
             <EditText
-                android:id="@+id/a"
+                android:id="@+id/A"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:hint="L="
-                android:inputType="number"
+                android:layout_marginTop="10dp"
+                android:hint="A="
                 android:textSize="30dp" />
-
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="yechimi"
-                android:textColor="#000"
-                android:textSize="50dp" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -60,16 +48,23 @@
                 <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:src="@drawable/img" />
+                    android:src="@drawable/img_34" />
 
                 <ImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/img_14" />
-
+                    android:src="@drawable/img_3" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Yechimi"
+                android:textColor="#000"
+                android:textSize="50dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_1"
@@ -84,11 +79,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="misol javobi"
+                android:text="misol jovobi!"
                 android:textColor="#000"
                 android:textSize="50dp" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
