--- a/app/src/main/res/layout/activity_yettinchi_masala2.xml
+++ b/app/src/main/res/layout/activity_yettinchi_masala2.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mavzular.birinchMavzu.masala.OnTortinchiMasala1Activity">
+    tools:context=".mavzular.ikkinchiMavzu.masala.YettinchiMasala2Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Begin14"
+                android:text="Integer7"
                 android:textColor="#000"
                 android:textSize="50dp" />
 
@@ -29,19 +28,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="10dp"
-                android:text="Begin14. Aylananing uzunligi L berilgan. Uning radiusi R va yuzasi S aniqlansin L = 2*pi*R  S =pi*R2  pi= 3 14"
+                android:text="Integer7. Ikki xonali son berilgan. Uning raqamlari yig'indisini aniqlovchi programma tuzilsin."
                 android:textColor="#000"
                 android:textSize="30dp" />
 
             <EditText
-                android:id="@+id/a"
+                android:id="@+id/A"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
-                android:hint="L="
+                android:hint="A="
                 android:inputType="number"
                 android:textSize="30dp" />
-
 
 
             <TextView
@@ -91,4 +89,4 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
