--- a/app/src/main/res/layout/activity_n3_uchinchi_mavzu.xml
+++ b/app/src/main/res/layout/activity_n3_uchinchi_mavzu.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
     android:background="@drawable/bg_sashka"
-    tools:context="com.example.androidteam32.mavzular.ikkinchiMavzu.IkkinchiMavzuActivity">
+    tools:context=".mavzular.n3UchinchiMavzu.N3UchinchiMavzuActivity">
+
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
+
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
@@ -176,7 +177,5 @@
 
 
     </ScrollView>
-
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
