--- a/app/src/main/res/layout/activity_m2_n17_misol.xml
+++ b/app/src/main/res/layout/activity_m2_n17_misol.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mavzular.n3UchinchiMavzu.masalalar.M3N4MisolActivity">
+    tools:context=".mavzular.n2ikkinchiMavzu.masala.M2N17MisolActivity">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Boolean4"
+                android:text="Integer17"
                 android:textColor="#000"
                 android:textSize="50dp" />
 
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="10dp"
-                android:text="Boolean4. Ikkita butun A va B sonlari berilgan. Jumlani rostlikka tekshiring:A>2 va B<=3"
+                android:text="Integer17. 999 dan katta bo'lgan son berilgan. Bir marta bo'lib butunni va bo'lib qoldiqni olish operatsiyasidan foydalanib berilgan sonni yuzliklar xonasidagi sonni aniglovchi programma tuzilsin."
                 android:textColor="#000"
                 android:textSize="30dp" />
 
@@ -40,14 +40,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:hint="A="
-                android:inputType="number"
-                android:textSize="30dp" />
-            <EditText
-                android:id="@+id/B"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:hint="B="
                 android:inputType="number"
                 android:textSize="30dp" />
 
