--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,61 +3,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/bg_sashka"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Mavzular:"
+        android:textColor="#000000"
+        android:textSize="50dp" />
+
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="10dp"
         android:id="@+id/btn_1"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_mavzu"
         android:text="1-mavzu"
         android:textColor="#000"
         android:textSize="30dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="10dp"
         android:id="@+id/btn_2"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:background="@drawable/bg_mavzu"
         android:text="2-mavzu"
         android:textColor="#000"
         android:textSize="30dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/bg_mavzu"
-        android:layout_marginTop="10dp"
         android:id="@+id/btn_3"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_mavzu"
         android:text="3-mavzu"
         android:textSize="30dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/bg_mavzu"
-        android:layout_marginTop="10dp"
         android:id="@+id/btn_4"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_mavzu"
         android:text="4-mavzu"
         android:textSize="30dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/bg_mavzu"
-        android:layout_marginTop="10dp"
         android:id="@+id/btn_5"
         android:layout_width="400dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_mavzu"
         android:text="5-mavzu"
         android:textSize="30dp" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_6"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_mavzu"
+        android:text="6-mavzu"
+        android:textSize="30dp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+
+
